supply-chain-training/chapters/ch09/gk-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: nur-interne-registries
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: [kube-system, gatekeeper-system]
  parameters:
    repos: ["reg-build:5000/", "reg-ziel:5000/"]
